Arreglo al titulo de la formacion

--- a/index.html
+++ b/index.html
@@ -311,10 +311,10 @@
 
                 <div>
                     <div class="formacion__card">
-                        <img src="img/logo-ucad" alt="logo universidad ucad" class="formacion__img">
+                        <img src="" alt="logo universidad ucad" class="formacion__img">
 
                         <div class="formacion__texto">
-                            <p class="formacion__titulo">Ingeniería en Sistemas Computacionales</p>
+                            <p class="formacion__titulo">Análisis y diseño de sistemas de información</p>
                             <p class="formacion__info">En curso</p>
                         </div>
 
