--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 
                 <div>
                     <div class="formacion__card">
-                        <img src="" alt="logo universidad ucad" class="formacion__img">
+                        <img src="" alt="logo sena" class="formacion__img">
 
                         <div class="formacion__texto">
                             <p class="formacion__titulo">Análisis y diseño de sistemas de información</p>
