Arreglo al Titulo terminacion

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 
                         <div class="formacion__texto">
                             <p class="formacion__titulo">Análisis y diseño de sistemas de información</p>
-                            <p class="formacion__info">En curso</p>
+                            <p class="formacion__info">2023 - Terminado</p>
                         </div>
 
                     </div>
