Creo logo del sena

--- a/index.html
+++ b/index.html
@@ -311,10 +311,10 @@
 
                 <div>
                     <div class="formacion__card">
-                        <img src="" alt="logo sena" class="formacion__img">
+                        <img src="img/logo-sena.svg" alt="logo sena" class="formacion__img">
 
                         <div class="formacion__texto">
-                            <p class="formacion__titulo">Análisis y diseño de sistemas de información</p>
+                            <p class="formacion__titulo">ADSI</p>
                             <p class="formacion__info">2023 - Terminado</p>
                         </div>
 
