Se agrega logo y stilos css

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <section class="hero">
 
         <div class="contenido-hero">
-
-            <img src="img/logo.png" alt="imagen daniel" class="contenido-hero__img">
-
+    
+                <img src="img/logo.png" alt="imagen David" class="contenido-hero__img">
+                
             <div class="contenido-hero__texto">
                 <p>Hola, mi nombre es David Celis y soy desarrollador Front-End.
                 </p>
