Se cambia parrafo del footer

--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
 
         <div class="contenedor footer-contenido">
             <div class="footer-p">
-                <p>Diseñado y desarrollado por Daniel Posadas Rangel | CDMX 2023 &copy;</p>
+                <p>Diseñado y desarrollado por David Eduardo Celis | Bogotá - Colombia 2023 &copy;</p>
             </div>
 
             <a class="footer-enlace" href="./index.html">
