--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
                     <path d="M16 16v-3a2 2 0 0 0 -4 0" />
                   </svg>
             </a>
-            <a target="_blank" href="">
+            <a target="_blank" href="https://wa.me/573153801021?text=Hola quiero más Información">
                 <svg width="43" height="40" version="1.0" viewBox="0 0 375 375" xmlns="http://www.w3.org/2000/svg" zoomAndPan="magnify">
                 <defs>
                 <clipPath id="a">
