--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <nav class="contenido-hero__lista">
 
                     <a class="contenido-hero__enlace" target="_blank"
-                        href="https://www.linkedin.com/in/david-celis-garc%C3%ADa-4b48571a7/?originalSubdomain=co">Linkedin
+                        href="https://www.linkedin.com/in/david-celis-garc%C3%ADa-4b48571a7">Linkedin
                     </a>
 
                     <a class="contenido-hero__enlace" target="_blank" href="https://github.com/David-prog-wed">GitHub
@@ -541,7 +541,7 @@
                     <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
                   </svg>
             </a>
-            <a target="_blank" href="https://www.linkedin.com/in/david-celis-garc%C3%ADa-4b48571a7/?originalSubdomain=co">
+            <a target="_blank" href="https://www.linkedin.com/in/david-celis-garc%C3%ADa-4b48571a7">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-linkedin" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                     <rect x="4" y="4" width="16" height="16" rx="2" />
