--- a/index.html
+++ b/index.html
@@ -551,6 +551,12 @@
                     <path d="M16 16v-3a2 2 0 0 0 -4 0" />
                   </svg>
             </a>
+            <a target="_blank" href="mailto:davidcelis28@gmail.com">
+                <svg icon="icon-tabler-brand-correo" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-correo" width="45" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <rect x="3" y="5" width="18" height="14" rx="2" />
+                    <polyline points="3 7 12 13 21 7" />
+                  </svg>
             <a target="_blank" href="https://wa.me/573153801021?text=Hola quiero más Información">
                 <svg width="43" height="40" version="1.0" viewBox="0 0 375 375" xmlns="http://www.w3.org/2000/svg" zoomAndPan="magnify">
                 <defs>
