--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                     </a>
 
                     <a class="contenido-hero__enlace" target="_blank"
-                        href="https://1drv.ms/b/s!AviMKQoTheZLgcYhFcfXmvgHPGLW9Q?e=BAIPf7">Mi CV
+                        download="analistaDeSistemas.pdf"
+                        href="./pdf/analistaDeSistemas.pdf">Mi CV
                     </a>
 
                     <a class="contenido-hero__enlace" target="_blank"
