--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
 
         <h2 class="titulo"> Contacto </h2>
 
-        <form action="https://formsubmit.co/dannohouse@gmail.com" method="POST" class="formulario">
+        <form action="https://formsubmit.co/davidcelis28@gmail.com" method="POST" class="formulario">
             <fieldset>
                 <legend id="legend">Tus datos</legend>
 
