--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
 
         <h2 class="titulo"> Contacto </h2>
 
-        <form action="https://formsubmit.co/davidcelis28@gmail.com" method="POST" class="formulario">
+        <form action="https://formsubmit.co/9578f61fdb43db48aaffde9efd0e7792" method="POST" class="formulario">
             <fieldset>
                 <legend id="legend">Tus datos</legend>
 
@@ -501,7 +501,7 @@
 
 
                 <input type="submit" class="btn" value="Enviar">
-                <input type="hidden" name="_next" value="https://danielposr.github.io/daniel-posadas-portafolio/enviado.html">
+                <input type="hidden" name="_next" value="https://github.com/David-prog-wed">
                 <input type="hidden" name="_captcha" value="false">
 
             </fieldset>
@@ -515,7 +515,7 @@
     <footer class="footer">
 
         <div class="contenedor footer-contenido">
-            <div class="footer-p">
+            <div class="footer-p ">
                 <p>Diseñado y desarrollado por David Eduardo Celis | Bogotá - Colombia 2023 &copy;</p>
             </div>
 
