--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
                     <a class="contenido-hero__enlace" target="_blank"
                         download="analistaDeSistemas.pdf"
-                        href="./pdf/analistaDeSistemas.pdf">Mi CV
+                        href="./pdf/Green and Grey Systems Analyst Technology Resume.pdf">Mi CV
                     </a>
 
                     <a class="contenido-hero__enlace" target="_blank"
