arreglando tittle de enviado

--- a/enviado.html
+++ b/enviado.html
@@ -19,7 +19,7 @@
 <body>
 
     <header id="header" class="header contenedor">
-        <h1 class="header-titulo">{ Daniel Posadas Rangel }</h1>
+        <h1 class="header-titulo">{ David Eduardo Celis }</h1>
     </header>
 
     <div class="contenedor">
