modificando el html

--- a/index.html
+++ b/index.html
@@ -499,9 +499,8 @@
                         placeholder="Escribe un mensaje" minlength="10"></textarea>
                 </div>
 
-
                 <input type="submit" class="btn" value="Enviar">
-                <input type="hidden" name="_next" value="https://github.com/David-prog-wed">
+                <!-- <input type="hidden" name="_next" value="https://portafolio-584.netlify.app" > -->
                 <input type="hidden" name="_captcha" value="false">
 
             </fieldset>
