Agregando url de gracias

--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
                 </div>
 
                 <input type="submit" class="btn" value="Enviar">
-                <!-- <input type="hidden" name="_next" value="https://portafolio-584.netlify.app" > -->
+                <input type="hidden" name="_next" value="https://david-prog-wed.github.io/graciasportafolio" >
                 <input type="hidden" name="_captcha" value="false">
 
             </fieldset>
