--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </a>
 
           <a class="contenido-hero__enlace" target="_blank" download="analistaDeSistemas.pdf"
-            href="./pdf/Green and Grey Systems Analyst Technology Resume.pdf">Mi HV
+            href="./pdf/Green and Grey Systems Analyst Technology Resume.pdf">
           </a>
 
           <a class="contenido-hero__enlace" target="_blank" href="#contacto">Certificados
